--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port: 4001
 spring.application.name=housing
+spring.jpa.defer-datasource-initialization= true
+spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=always
+spring.datasource.url=jdbc:h2:~/houses.db
+spring.datasource.driverClassName=org.h2.Driver
